--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "ws": "^8.18.3"
