--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ server/npm-debug.log
 server/yarn-error.log
 server/.env
 
+#frontend
+ProjectXFrontend/node_modules
+
 #OS files
 .DS_Store
 Thumbs.db
