--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "sanitize-filename": "^1.6.3",
+    "uuid": "^13.0.0",
     "ws": "^8.18.3"
   }
 }
