--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "express": "^5.1.0",
     "mqtt": "^5.14.1",
     "multer": "^2.0.2",
